<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>io.axoniq.demo.bikerental</groupId>
    <artifactId>bike-rental</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>bike-rental</name>
    <description>Demo project for Axon</description>
    <packaging>pom</packaging>

	<modules>
		<module>payment</module>
		<module>rental</module>
		<module>core-api</module>
        <module>microservices/rental-ui</module>
		<module>microservices/rental-command</module>
		<module>microservices/rental-query</module>
		<module>microservices/rental-payment</module>
        <module>frontend</module>
    </modules>

    <properties>
        <java.version>21</java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.axoniq.framework</groupId>
                <artifactId>axoniq-framework-bom</artifactId>
                <version>5.1.1-SNAPSHOT </version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.axoniq.framework</groupId>
			<artifactId>axoniq-spring-boot-starter</artifactId>
            <version>5.1.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.axoniq.console</groupId>
			<artifactId>console-framework-client-spring-boot-starter</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.axonframework.extensions.metrics</groupId>
			<artifactId>axon-metrics-micrometer</artifactId>
            <version>5.1.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-kotlin</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.axonframework</groupId>
			<artifactId>axon-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

    <profiles>
        <profile>
            <id>native</id>
			<dependencies>
				<dependency>
					<groupId>org.axonframework.extensions.spring-aot</groupId>
					<artifactId>axon-spring-aot</artifactId>
				</dependency>
			</dependencies>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                        </plugin>
                        <plugin>
                            <groupId>org.graalvm.buildtools</groupId>
                            <artifactId>native-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>build-image</id>
                                    <goals>
                                        <goal>compile-no-fork</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
